@@ -1,6 +1,10 @@
 2004-11-27  Gary Cramblitt (PhantomsDad)
         * Extremely rudimentary support for SSML/Sable using FestivalInt plugin.  If it works for
           you, it will be minor miracle.
+        * In FestivalInt configuration dialog, do not enable OK button if EXE Path is invalid.
+        * When Editing existing FestivalInt configuration, do not inadvertently change the selected
+          voice when rescanning.
+        * In FestivalInt configuration dialog, disable voice combo box until scan has been clicked.
 
 2004-11-26  Gary Cramblitt (PhantomsDad)
         * Slight throughput improvement by eliminating pause at start of each Festival utterance.
